# nano-megatron

./: .gitignore  README.md  pyproject.toml
scripts/: benchmark_tiny.py  run_dp_demo.py  run_tp_demo.py  train_tiny.py
src/nano_megatron/: __init__.py  config.py  random.py
src/nano_megatron.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nano_megatron/data/: __init__.py  synthetic.py
src/nano_megatron/data_parallel/: __init__.py  grad_sync.py
src/nano_megatron/distributed/: __init__.py  initialize.py  parallel_state.py
src/nano_megatron/model/: __init__.py  attention.py  embedding.py  gpt.py  loss.py  mlp.py  norm.py  qwen.py  rope.py  tp_attention.py  tp_gpt.py  tp_mlp.py
src/nano_megatron/tensor_parallel/: __init__.py  layers.py  mappings.py
src/nano_megatron/training/: __init__.py  checkpointing.py  optimizer.py  scheduler.py  trainer.py
src/nano_megatron/utils/: __init__.py  device.py  memory.py
tests/correctness/: test_gpt_correctness.py  test_qwen_correctness.py  test_tp_correctness.py
tests/distributed/: test_dp_correctness.py  test_dp_demo.py  test_initialize.py  test_tp_demo.py
tests/integration/: test_train.py
tests/unit/: test_attention.py  test_checkpointing.py  test_config.py  test_config_qwen.py  test_embedding.py  test_gpt.py  test_gradient_accumulation.py  test_loss.py  test_mlp.py  test_norm.py  test_optimizer.py  test_qwen.py  test_random.py  test_rope.py  test_scheduler.py  test_swiglu.py  test_synthetic.py  test_tp_layers.py  test_tp_model.py  test_tp_parallel_state.py
